--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.292.0",
     "next-themes": "^0.4.4",
+    "react-barcode": "^1.6.1",
     "react-day-picker": "^8.9.1",
     "react-router-dom": "6",
     "react-to-print": "^2.14.15",
